--- a/report.tex
+++ b/report.tex
@@ -2,7 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage{fancyhdr}
-\usepackage[margin=1in]{geometry}
+\usepackage[margin=1in, left=0.75in, right=0.75in]{geometry}
 \usepackage{booktabs}
 \usepackage{tabu}
 \usepackage[labelfont=bf, skip=5pt, font=small]{caption}
@@ -39,15 +39,14 @@
 \tableofcontents
 \newpage
 
-\section*{\Huge List of Tables}
-\addcontentsline{toc}{section}{List of Tables}
+% \section*{\Huge List of Tables}
+% \addcontentsline{toc}{section}{List of Tables}
+\listoftables
 \newpage
-% \listoftables
 
-\section*{\Huge List of Figures}
-\addcontentsline{toc}{section}{List of Figures}
-% \listoffigures
-
+\hypertarget{listoffigures}{}
+\addcontentsline{toc}{section}{\protect\hyperlink{listoffigures}{List of Figures}} 
+\listoffigures
 \newpage
 
 % Abstract
@@ -76,7 +75,7 @@ In the context of ice hockey, a sport known for its speed and complexity, the ne
 {
 \setlength{\parskip}{0.3cm}
 \subsection{Context and Motivation}
-\begin{spacing}{1.3}
+\begin{spacing}{1.2}
 The emergence of advanced analytics in sports, leveraging machine learning and computer vision, has revolutionized how games are analyzed and understood. Specifically, ice hockey, with its fast-paced and intricate team dynamics, presents a unique set of challenges and opportunities for technological innovation. This project lies at the intersection of these technological advancements and the growing demand for in-depth sports analytics.
 
 The primary motivation for this investigation stems from the inherent limitations of traditional player tracking methods in ice hockey, which are mainly manual, tedious, and not sufficiently robust to capture the complex, high-speed movements that are typical of the sport. These traditional methods often yield data that lacks the depth and precision necessary for a comprehensive analysis of player performance and team strategies.
@@ -90,6 +89,7 @@ Furthermore, the project recognizes the growing interest in sports analytics for
 In summary, this project is motivated by the intersection of technical challenges, the potential for significant contributions to sports analytics in ice hockey, and the broader implications for team performance and fan engagement. Through the investigation grounded in the latest research and technological innovations, it aims to push the boundaries of what is possible in sports analytics and player tracking.
 \end{spacing}
 }
+\newpage
 
 {
 \setlength{\parskip}{0.3cm}
@@ -129,8 +129,70 @@ The report is structured into six chapters to systematically cover every aspect 
 \newpage
 
 \section{Background}
+{
+\setlength{\parskip}{0.3cm}
+\subsection{Machine Learning in Sports Analytics}
+\begin{spacing}{1.2}
+The integration of machine learning (ML) into sports analytics marks a paradigm shift from conventional statistical methods to more sophisticated, predictive models that can analyze complex patterns and interactions within sports data. This transition is driven by the demand for more accurate analytics to enhance team performance, strategy formulation, and player evaluation. Machine learning (ML) is a branch of artificial intelligence that focuses on building systems that learn from data. Rather than being explicitly programmed to perform a task, these systems are trained on a dataset, allowing them to improve their performance over time as they are exposed to more data. In the context of sports analytics, ML techniques are used to process and analyze vast amounts of game data to uncover patterns, make predictions, and provide insights that can enhance decision-making for teams and coaches.
 
-\subsection{Subsection Example}
+The effectiveness of machine learning in sports analytics is predicated on its ability to handle the high dimensionality of sports data and to learn from data to make accurate predictions or classifications. Unlike traditional statistical methods that often require simplifications or assumptions about the data, ML algorithms can model complex relationships within the data, offering a more nuanced understanding of game dynamics. This capability is valuable in sports like ice hockey, where the fast pace and intricate team dynamics present unique analytical challenges.
+
+The integration of machine learning into sports analytics represents a significant advancement in how sports data is analyzed and utilized. By leveraging complex algorithms to interpret and predict sports outcomes, ML opens new avenues for performance optimization, strategic planning, and enhancing the competitive edge of teams and athletes. This overview sets the stage for exploring specific ML techniques and their application in tracking players in professional ice hockey matches, which is the focus of this project.
+
+% References:
+% Rein, R., & Memmert, D. (2016). Big data and tactical analysis in elite soccer: Future challenges and opportunities for sports science. SpringerPlus, 5(1), 1410.
+% Gudmundsson, J., & Horton, M. (2017). Spatio-temporal analysis of team sports. ACM Computing Surveys (CSUR), 50(2), Article 22.
+
+\subsubsection{Convolutional Neural Networks (CNNs) in Player Detection}
+One of the key ML techniques employed in player detection within sports videos is the convolutional neural network (CNN). CNNs are a class of deep neural networks that are particularly effective at analyzing visual imagery. They use a series of convolutional layers to automatically and adaptively learn spatial hierarchies of features from input images. This capability makes them exceptionally suited for tasks such as image recognition, object detection, and even video analysis.
+
+Convolutional Neural Networks (CNNs) stand out in the machine learning landscape for their exceptional ability to process and analyze images, making them ideal for applications such as player detection in sports videos. The architecture of a CNN is designed to mimic the way the human visual cortex works, allowing it to efficiently recognize patterns, shapes, and objects within complex visual inputs.
+
+A CNN is composed of several layers that process and transform the input image to extract relevant features for the task at hand, such as detecting players on a sports field. A CNN architecture is shown in Figure~\ref{fig:cnn}. These layers include:
+
+\begin{itemize}
+    \item \textbf{Convolutional Layers}: The backbone of a CNN, these layers apply filters (or kernels) to the input image to create feature maps. Each filter is designed to detect specific features, such as edges, textures, or parts of objects (e.g., a player's jersey or helmet). By sliding the filter across the image, the network can capture spatial hierarchies of features, from simple to complex.
+
+    \item \textbf{Activation Layers}: Following convolution, an activation function such as the Rectified Linear Unit (ReLU) is applied to introduce non-linearity into the network. This step is crucial for enabling the CNN to learn and model complex patterns in the data.
+
+    \item \textbf{Pooling Layers}: These layers reduce the dimensionality of the feature maps, making the detection process computationally efficient while retaining essential information. Max pooling, for example, reduces the size of the feature maps by taking the maximum value in a specific window, enhancing the network's ability to focus on the most prominent features.
+
+    \item \textbf{Fully Connected Layers}: Towards the end of the CNN architecture, fully connected layers combine all the features learned by previous layers to classify the image or detect objects within it. In the context of player detection, this involves determining whether a region of the image contains a player and identifying the player's location.
+
+    \item \textbf{Output Layer}: The final layer outputs the detection results, typically in the form of bounding boxes around detected players and classification scores indicating the confidence level of the detections.
+\end{itemize}
+
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=\linewidth]{CNN.png}
+\captionsetup{font=large}
+\caption{Convolutional Neural Network}
+\label{fig:cnn}
+\end{figure}
+
+Training a CNN involves showing it thousands of labeled images, where the locations of players are marked with bounding boxes. The network adjusts its weights through a process known as backpropagation, where the difference between the predicted output and the actual label is used to update the weights in a way that minimizes this difference. This learning process enables the CNN to improve its ability to detect players as it goes through more training images.
+
+The YOLO algorithm represents a significant advancement in utilizing CNNs for object detection, including player detection. Unlike traditional approaches that scan an image in parts to find objects, YOLO looks at the entire image in a single pass, predicting bounding boxes and class probabilities directly from the full images. This holistic approach allows YOLO to detect objects, such as players, rapidly and accurately, making it highly effective for real-time sports analytics applications.
+
+By leveraging CNNs and advanced algorithms like YOLO, player detection systems can achieve remarkable accuracy, enabling detailed analysis of game dynamics and player movements without manual labeling or tracking. This automated, efficient processing of visual data opens up new possibilities for enhancing sports strategies, player evaluations, and audience engagement through enriched visual content.
+
+\subsubsection{Support Vector Machines (SVMs) for Player Classification}
+
+\end{spacing}
+}
+
+{
+\setlength{\parskip}{0.3cm}
+\subsection{Player Detection Technologies}
+\begin{spacing}{1.2}
+\end{spacing}
+}
+
+\subsection{Color-based Team Classification using HSV Histograms and K-means Clustering}
+\subsection{Application of DeepSORT for Player Tracking}
+\subsection{Field Point Detection and Homography for 2D Rink Mapping}
+\subsection{Heatmap Generation for Strategic Analysis}
+\subsection{Reference Framework and Peer-Reviewed Literature}
 \newpage
 
 \section{Methodology and Implementation}
